Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -141,10 +141,10 @@ The general method workflow of our method is illustrated in Figure \ref{fig:meth
 } \caption{\textbf{General workflow of our method.}} \label{fig:method} \end{center} \end{figure*} %
 %%%%%%%%%%%%%%%%%%%%%%
 
-In order to test for the influence of initial spatial conditions on model outputs, we use a systematic method to compare phase diagrams. We define a phase diagram as the vector of model outputs considered as a function of model parameters. Technically, because of stochasticity, we represent the output of the model for a given combination of parameter values $\overrightarrow{P}$ as the median of the final values of an output indicator $O$ obtained for the replications of the model initialized with $\overrightarrow{P}$.\\
+In order to test for the influence of initial spatial conditions on model outputs, we use a systematic method to compare {\bf phase diagrams}. We define a phase diagram as the vector of model outputs considered as a function of model parameters. Technically, because of stochasticity, we represent the output of the model for a given combination of parameter values $\vec{P}$ as the median of the final values of an output indicator $O$ obtained for the replications of the model initialized with $\vec{P}$.\\
 
 %Comparing phase diagrams is useful because it allows us to compare the 
-Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic (with around 50 different spatial configurations in our applications). A solution is to use systematic quantitative procedures. To our knowledge there exist no well established method to compare phase diagrams in agent-based modeling and geosimulation literature. We propose to use a relative distance between two phase diagram corresponding to the share of between-diagrams variability relative to their internal variability, given formally in the case of a one-dimensional phase diagram by
+We have as many phase diagrams than we have spatial grids, which makes a qualitative visual comparison not realistic (with around 50 different spatial configurations for each model experiment). A solution is to use systematic quantitative procedures to compare them. To our knowledge there exist no single well established method to compare phase diagrams in the agent-based modelling and geosimulation literature. We propose to define the relative distance $d_r$ between two phase diagrams $\vec{\alpha_1}$ and $\vec{\alpha_2}$ as the share of between-diagrams variability relative to their internal variability, given formally in the case of a one-dimensional phase diagram by
 
 %\comment[FL]{je ne comprends pas ce choix : pourquoi faut il considérer que des classes ayant une forte cohérence interne seraient plus éloignées? ou alors la question ne se pose pas en ces termes... Par ailleurs est ce que la formule est bien homogène du point de vue des dimensions? En tous cas je pense qu'on peut se passer de la formule à ce stade, éventuellement à mettre dans l'affichage des résultats si on en a besoin.}[(JR) pour l'homogénéité oui justement on prend $d^2$ car c'est les variances, on obtient une mesure sans unité ; ok pour omettre la formule ; pour l'interprétation, on regarde la distance relative, pour des classes à une certaine distance, si elles sont concentrées, cette distance sera plus sigificative que si elles ont une grande variabilité et peuvent se recouper ; par exemple si elles ont mêmes variance $\sigma^2$, alors si $d \simeq \sqrt{2} \sigma$ alors les nuages de points vont en gros se recouper sur leur moitié (cas gaussien idéal), tandis que si $d\gg \sigma$, le max d'un diagramme sera très loin du min de l'autre - on compare à la fois la distance relative et la distance de forme.]
 
@@ -157,7 +157,7 @@ d_r\left(\vec{\alpha_1},\vec{\alpha_2}\right) = 2 \cdot \frac{d(f_{\vec{\alpha_1
 where $f_{\vec{\alpha_i}}$ are the phase diagrams at given meta-parameters $\vec{\alpha_i}$. $d$ is a functional distance that we take simply as Euclidian distance. The variances are estimated within each phase diagram $f_{\vec{\alpha_i}}$. For a multi-dimensional phase diagram, we sum these relative distances over the components. 
 
 
-The last methodological point which we need to emphasis is the relation between the workflow we introduce and model exploration workflows. The ideas of multi-modeling and extensive model exploration are nothing from new as ~\cite{openshaw1983data} already advocated for ``model-crunching'', but their effective use only begins to emerge thanks to the apparition of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMole~\citep{reuillon2013openmole} allows to embed any model as a blackbox, write modulable exploration workflow using advanced methodologies such as genetic algorithms and distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, the workflow tool is a powerful way to embed both the sensitivity analysis and the meta-sensitivity analysis, and allow to couple any generator with any model in a straightforward way as soon as the model can take its spatial configuration as input or from an input file. In this paper, we use the OpenMole platform for spatial environment and model coupling, placing ourselves in the renewed framework of multi-modelling claimed by \citet{cottineau2015modular}.
+The last methodological point which we need to emphasize is the relation between the workflow we introduce and model exploration workflows. The ideas of multi-modeling and extensive model exploration are nothing from new as ~\cite{openshaw1983data} already advocated for ``model-crunching'', but their effective use only begins to emerge thanks to the apparition of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMole~\citep{reuillon2013openmole} allows to embed any model as a blackbox, write modulable exploration workflow using advanced methodologies such as genetic algorithms and distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, the workflow tool is a powerful way to embed both the sensitivity analysis and the meta-sensitivity analysis, and allow to couple any generator with any model in a straightforward way as soon as the model can take its spatial configuration as input or from an input file. In this paper, we use the OpenMole platform for spatial environment and model coupling, placing ourselves in the renewed framework of multi-modelling claimed by \citet{cottineau2015modular}.
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Spatial generator of density grids}
 
