Update on Overleaf.

--- a/header.tex
+++ b/header.tex
@@ -73,18 +73,41 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 %\renewcommand\Authfont{\fontsize{11}{1}\selectfont}
 %\renewcommand\Affilfont{\fontsize{9}{1}\selectfont}
 
-\renewcommand*\footnoterule{}
+%\renewcommand*\footnoterule{}
 
 \usepackage[table]{xcolor}
 \usepackage[parfill]{parskip} % Line between paragraphs
 \usepackage{amsmath}
 %\pagenumbering{arabic} 
 
-\usepackage{sectsty}
-\allsectionsfont{\sffamily}
+%\usepackage{sectsty}
+%\allsectionsfont{\sffamily}
 
 %\usepackage[pdftex]{hyperref} 
 %\hypersetup{pdfborder={0 0 0} }
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%
+%% -- from ecrc template
+%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%% set the volume if you know. Otherwise `00'
+\volume{00}
+
+%% set the starting page if not 1
+\firstpage{1}
+
+
+
+\jid{}
+
+
+\biboptions{authoryear}
+
+
 
 
 
