--- a/paper.tex
+++ b/paper.tex
@@ -1,41 +1,52 @@
-\documentclass[Royal,sageh,times]{sagej}
-% Afour
+%% The '3p' and 'times' class options of elsarticle are used for Elsevier CRC
+%% The 'procedia' option causes ecrc to approximate to the Word template
+\documentclass[3p,times,procedia]{elsarticle}
+\flushbottom
+
+%% The `ecrc' package must be called to make the CRC functionality available
+\usepackage{ecrc}
+
 \input{header.tex}
+
+%\runauth{Raimbault et al.}
+\runauth{}
 
 \begin{document}
 
 % **************  TITLE AND AUTHOR INFORMATION **************
 
 
-%\runninghead{Raimbault \& al.}
-\runninghead{}
+\begin{frontmatter}
+
+\dochead{}
 
 \title{Space Matters: extending sensitivity analysis to initial spatial conditions in geosimulation models
 %Initial spatial conditions in simulation models: the missing leg of sensitivity analyses?
 }
 
-%\author{Juste Raimbault\affilnum{1,2}, 
-%Cl{\' e}mentine Cottineau\affilnum{3,4},
-%Marion Le Texier\affilnum{5}, 
-%Florent Le N{\' e}chet\affilnum{2}, 
-%Romain Reuillon\affilnum{1,6}
-%}
-\author{}
+\author[a,b]{Juste Raimbault\corref{cor1}}
+\author[c,d]{Cl{\' e}mentine Cottineau}
+\author[e]{Marion Le Texier}
+\author[f]{Florent Le N{\' e}chet}
+\author[a]{Romain Reuillon}
 
-%\affiliation{\affilnum{1}UMR 8504 G{\'e}ographie-cit{\'e}s, Paris, France\\
-%\affilnum{2}Laboratoire Ville Mobilit{\'e} Transport, Universit{\'e} Paris-Est, France\\
+
+\address[a]{UPS CNRS 3611 ISC-PIF, Paris, France}
+\address[b]{UMR CNRS 8504 G{\'e}ographie-cit{\'e}s, Paris, France}
+\address[c]{Centre for Advanced Spatial Analysis, University College London, UK}
+\address[d]{UMR CNRS 8097 Centre Maurice Halbwachs, Paris, France}
+\address[e]{UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
+\address[f]{Université Paris-Est, Laboratoire Ville Mobilité Transport, Marne-la-Vallée, France}
 %NB : mon affiliation "officielle" c'est : 
 %Le Néchet, F., Université Paris-Est, Laboratoire Ville Mobilité Transport, UPEMLV : 5 boulevard Copernic, Cité Descartes F 77454 Marne-la-Vallée cedex 2 France
-%\affilnum{3}Centre for Advanced Spatial Analysis, University College London, UK\\
-%\affilnum{4}CNRS, UMR 8097 Centre Maurice Halbwachs, Paris, France\\
-%\affilnum{5}UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France\\
-%\affilnum{6}Institut des Syst{\`e}mes Complexes Paris Ile-de-France, France}
 
+
+\cortext[cor1]{Corresponding author.}
 
 %\corrauth{Juste Raimbault, UMR CNRS 8504 G{\'e}ographie-cit{\'e}s
 %13 rue du Four,
 %75006 Paris, France.
-%\email{juste.raimbault@polytechnique.edu}}
+%}
 %\corrauth{}
 
 
@@ -191,13 +202,20 @@
 Although simulation models of geographical systems in general and agent-based models in particular represent a fantastic opportunity to explore socio-spatial behaviours and to test a variety of scenarios for public policy, the validity of generative models is uncertain until their results are proven robust and representative of 'real-world' conditions. Sensitivity analysis usually includes the analysis of the effect of stochasticity on the variability of results, as well as the effects of small parameter changes. However, initial spatial conditions are usually taken for granted in geographical models, thus leaving completely unexplored the effect of spatial arrangements on the interactions of agents and of that of agents with their environment. In this paper, we present a method to assess the effect of initial spatial conditions on simulation models, using a systematic generator controlled by meta-parameters in order to create the density grids with which spatial simulation models are initialised. We show, with the example of two classical agent-based models (Schelling's models of segregation and Sugarscape's model of resource harvesting) and a straightforward open-source work-flow using high performance computing, that the effect of space is significant in the two types of simulation. Furthermore, this effect is sometimes larger than the effect of parameters' value change. 
 \end{abstract}
 
-\keywords{Space, Initial conditions, Sensitivity, ABM, Validation}
+\begin{keyword}
+Space \sep Initial conditions \sep Sensitivity \sep ABM \sep Validation
+\end{keyword}
 
-\maketitle
+\end{frontmatter}
+
+\email{juste.raimbault@polytechnique.edu}
 
 
-% **************  MAIN BODY OF THE PAPER **************
-%\newpage
+%\maketitle
+
+%% main text
+
+\enlargethispage{-15mm}
 
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
@@ -523,13 +541,13 @@ After reviewing the extensive literature on spatial biases in statistical and si
 %%%%%%%%%%%%
 
 
-\bibliographystyle{SageH}
+\bibliographystyle{elsarticle-harv}
 \bibliography{spacematters}
 
 
 \newpage
 
-\begin{sm}
+\section*{Supplementary material}
 
 %%%%%%%%%%%%%
 \begin{figure}[h!]
@@ -540,7 +558,6 @@ After reviewing the extensive literature on spatial biases in statistical and si
 \end{figure}
 %%%%%%%%%%%%%
 
-\end{sm}
 
 
 
