Update on Overleaf.

--- a/header.tex
+++ b/header.tex
@@ -87,6 +87,8 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 %\hypersetup{pdfborder={0 0 0} }
 
 
+\usepackage[flushleft]{threeparttable}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
