Update on Overleaf.

--- a/header.tex
+++ b/header.tex
@@ -112,4 +112,23 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 
 
+\usepackage{soul}
+\soulregister\cite7
+\soulregister\citep7
+\soulregister\ref7
+
+%\usepackage[final]{changes}
+\usepackage{changes}
+
+
+\setaddedmarkup{\textcolor{black}{\hl{#1}}}
+\setdeletedmarkup{\textcolor{red}{\sout{#1}}}
+
+
+
+
+
+
+
+
 
