--- a/spacematters.bib
+++ b/spacematters.bib
@@ -14,7 +14,12 @@
 	Volume = {78},
 	Year = {2003}}
 
-
+@book{arthur1994increasing,
+  title={Increasing returns and path dependence in the economy},
+  author={Arthur, W Brian},
+  year={1994},
+  publisher={University of michigan Press}
+}
 
 @ARTICLE{2017arXiv170806743R,
    author = {{Raimbault}, J.},
