--- a/header.tex
+++ b/header.tex
@@ -15,8 +15,8 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 %%%%%
 % variable to include comments or not in the compilation ; set to 1 to include
-\def \draft {1}
-%\def \draft {0}
+%\def \draft {1}
+\def \draft {0}
 
 
 
@@ -117,8 +117,8 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \soulregister\citep7
 \soulregister\ref7
 
-%\usepackage[final]{changes}
-\usepackage{changes}
+\usepackage[final]{changes}
+%\usepackage{changes}
 
 
 \setaddedmarkup{\textcolor{black}{\hl{#1}}}
