--- a/paper.tex
+++ b/paper.tex
@@ -24,25 +24,25 @@
 %Initial spatial conditions in simulation models: the missing leg of sensitivity analyses?
 }
 
-%\author[a,b]{Juste Raimbault\corref{cor1}}
-%\author[c,d]{Cl{\' e}mentine Cottineau}
-%\author[e]{Marion Le Texier}
-%\author[f]{Florent Le N{\' e}chet}
-%\author[a]{Romain Reuillon}
-\author{}
+\author[a,b]{Juste Raimbault\corref{cor1}}
+\author[c,d]{Cl{\' e}mentine Cottineau}
+\author[e]{Marion Le Texier}
+\author[f]{Florent Le N{\' e}chet}
+\author[a]{Romain Reuillon}
+%\author{}
 
 
-%\address[a]{UPS CNRS 3611 ISC-PIF, Paris, France}
-%\address[b]{UMR CNRS 8504 G{\'e}ographie-cit{\'e}s, Paris, France}
-%\address[c]{Centre for Advanced Spatial Analysis, University College London, UK}
-%\address[d]{UMR CNRS 8097 Centre Maurice Halbwachs, Paris, France}
-%\address[e]{UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
-%\address[f]{Université Paris-Est, Laboratoire Ville Mobilité Transport, Marne-la-Vallée, France}
+\address[a]{UPS CNRS 3611 ISC-PIF, Paris, France}
+\address[b]{UMR CNRS 8504 G{\'e}ographie-cit{\'e}s, Paris, France}
+\address[c]{Centre for Advanced Spatial Analysis, University College London, UK}
+\address[d]{UMR CNRS 8097 Centre Maurice Halbwachs, Paris, France}
+\address[e]{UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
+\address[f]{Université Paris-Est, Laboratoire Ville Mobilité Transport, Marne-la-Vallée, France}
 %NB : mon affiliation "officielle" c'est : 
 %Le Néchet, F., Université Paris-Est, Laboratoire Ville Mobilité Transport, UPEMLV : 5 boulevard Copernic, Cité Descartes F 77454 Marne-la-Vallée cedex 2 France
 
 
-%\cortext[cor1]{Corresponding author.}
+\cortext[cor1]{Corresponding author.}
 
 %\corrauth{Juste Raimbault, UMR CNRS 8504 G{\'e}ographie-cit{\'e}s
 %13 rue du Four,
@@ -99,7 +99,17 @@ Space \sep Initial conditions \sep Sensitivity \sep ABM \sep Validation
 
 \end{frontmatter}
 
-%\email{juste.raimbault@polytechnique.edu}
+\email{juste.raimbault@polytechnique.edu}
+
+
+%%%%%%%
+%% Highlights
+%
+% - We investigate the sensitivity of geosimulation models to initial spatial conditions.
+% - We generate stylized population density grids.
+% - We assess the sensitivity of two classical agent-based models, Schelling's model and Sugarscape's model.
+% - Strong quantitative and qualitative effects of spatial initial conditions are shown for these models.
+
 
 
 %\maketitle
@@ -110,7 +120,6 @@ Space \sep Initial conditions \sep Sensitivity \sep ABM \sep Validation
 
 
 %\textbf{Example track changes : }\added{this is added text}, \deleted{removed} text or \replaced{new}{old} replaced text
-
 
 
 
