--- a/paper.tex
+++ b/paper.tex
@@ -23,7 +23,7 @@
 \author{}
 
 %\affiliation{\affilnum{1}UMR 8504 G{\'e}ographie-cit{\'e}s, Paris, France\\
-%\affilnum{2}Laboratoire Ville Mobilit{\'e} Transport, Universit{\'e} Paris-Est, France\\
+%\affilnum{2}Universit{\'e} Paris-Est, Laboratoire Ville Mobilit{\'e} Transport, France\\
 %NB : mon affiliation "officielle" c'est : 
 %Le Néchet, F., Université Paris-Est, Laboratoire Ville Mobilité Transport, UPEMLV : 5 boulevard Copernic, Cité Descartes F 77454 Marne-la-Vallée cedex 2 France
 %\affilnum{3}Centre for Advanced Spatial Analysis, University College London, UK\\
@@ -36,7 +36,7 @@
 %13 rue du Four,
 %75006 Paris, France.
 %\email{juste.raimbault@polytechnique.edu}}
-%\corrauth{}
+\corrauth{}
 
 
 
@@ -70,6 +70,8 @@
 
 
 % **************  ABSTRACT  **************
+
+
 
 \begin{abstract}
 %\noindent
